# airbnb-agent

./: .env  .env.example  .gitignore  .vercelignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
airbnb_agent/: __init__.py  app.py
airbnb_agent/services/: __init__.py  airbnb_calendar.py  database.py
airbnb_agent/static/css/: style.css
airbnb_agent/templates/: calendar.html  desempeno.html  login.html  reserva_edit.html  reservatinaja.html  reservatinaja_ingresar.html  tinaja.html
public/static/css/: style.css
scripts/: backfill_codigo_reserva.py  check_reserva_marzo.py  verificar_mongodb.py
